@@ -1,3 +1,12 @@
+2007-06-14  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* Client/Managers/TorrentManager.cs:
+		Enhancement: Now the PieceHashed events are firing immediately when
+				a piece is hashed.
+		Bugfix: Torrent now starts correctly when fast resume data isn't available
+
+
+
 2007-06-12  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* Client/Managers/ConnectionManager.cs: Fixed up the code and removed
